Remove headline overlapping image on feature templates. Fix inline figure margins (again). Simplify font-sizing mixins to remove 100s line of code. This is a really horrible branch. I'm sorry.

--- a/ArticleTemplates/css/scss/partials/_figure.scss
+++ b/ArticleTemplates/css/scss/partials/_figure.scss
@@ -33,6 +33,7 @@ figure {
 
 	// Inline
 	&.figure-inline {
+		@include margin(1, 0, 1, 0);
 		@include mq($to: col1) {
 			img {
 				width: 100%;
