--- a/ArticleTemplates/css/scss/templates/_football.scss
+++ b/ArticleTemplates/css/scss/templates/_football.scss
@@ -953,8 +953,8 @@
 						padding-left: $base-3 / 1.5;
 					}
 					.football-player {
-						font-size: $meta-size-3;
-						line-height: $meta-lead-3;
+						font-size: $meta-size-2;
+						line-height: $meta-lead-2;
 						width: 100%;
 						padding-bottom: 4px;
 						.football-player-number {
@@ -969,8 +969,8 @@
 			.football-stats {
 				margin: $base-3 / 1.5;
 				p {
-					font-size: $meta-size-3;
-					line-height: $meta-lead-3;
+					font-size: $meta-size-2;
+					line-height: $meta-lead-2;
 				}
 				.football-possession {
 					margin: -2px $base-3 * 5 8px $base-3 * 5;
@@ -980,8 +980,8 @@
 					}
 					.football-possession-wrapper {
 						.football-possession-labels {
-							font-size: $meta-size-3;
-							line-height: $meta-lead-3;
+							font-size: $meta-size-2;
+							line-height: $meta-lead-2;
 							span {
 								margin-top: 4px;
 								font-size: 3.2rem;
@@ -1008,7 +1008,7 @@
 							p {
 								padding: $base-3 / 1.5 4px;
 								span {
-									font-size: $standfirst-size-3;
+									font-size: $standfirst-size-2;
 									margin: 2px 0 12px 0;
 								}
 							}
@@ -1022,7 +1022,7 @@
 					}
 					.football-line {
 						padding: 2px 4px;
-						font-size: $standfirst-size-3;
+						font-size: $standfirst-size-2;
 						.football-line-home {
 						 	padding: 2px 4px;
 						}
@@ -1042,8 +1042,8 @@
 					border-right: 1px dotted $background;
 					vertical-align: top;
 					.football-match {
-						font-size: $meta-size-3;
-						line-height: $meta-lead-3;
+						font-size: $meta-size-2;
+						line-height: $meta-lead-2;
 						padding: 3px $base-3 * 12;
 						margin-bottom: 4px;
 						position: relative;
@@ -1068,8 +1068,8 @@
 					width: 50%;
 					vertical-align: top;
 					.football-table-entry {
-						font-size: $meta-size-3;
-						line-height: $meta-lead-3;
+						font-size: $meta-size-2;
+						line-height: $meta-lead-2;
 						padding: 3px 0 3px $base-3 * 12;
 						margin-bottom: 4px;
 						position: relative;
@@ -1107,8 +1107,8 @@
 						padding-left: $base-4 / 1.5;
 					}
 					.football-player {
-						font-size: $meta-size-4;
-						line-height: $meta-lead-4;
+						font-size: $meta-size-2;
+						line-height: $meta-lead-2;
 						width: 100%;
 						margin-bottom: 4px;
 						.football-player-number {
@@ -1123,16 +1123,16 @@
 			.football-stats {
 				margin: $base-4 / 1.5;
 				p {
-					font-size: $meta-size-4;
-					line-height: $meta-lead-4;
+					font-size: $meta-size-2;
+					line-height: $meta-lead-2;
 				}
 				.football-possession {
 					margin: -2px $base-4 * 6 8px $base-4 * 6;
 					width: cols($base-4, 6);
 					.football-possession-wrapper {
 						.football-possession-labels {
-							font-size: $meta-size-4;
-							line-height: $meta-lead-4;
+							font-size: $meta-size-2;
+							line-height: $meta-lead-2;
 							span {
 								margin-top: 4px;
 								font-size: 3.2rem;
@@ -1159,7 +1159,7 @@
 				 			p {
 				 				padding: $base-4 / 1.5 4px;
 				 				span {
-				 					font-size: $standfirst-size-4;
+				 					font-size: $standfirst-size-2;
 				 					margin: 2px 0 12px 0;
 				 				}
 				 			}
@@ -1173,7 +1173,7 @@
 				 	}
 				 	.football-line {
 					 	padding: 2px 4px;
-					 	font-size: $standfirst-size-4;
+					 	font-size: $standfirst-size-2;
 					 	.football-line-home {
 						 	padding: 2px 4px;
 					 	}
@@ -1193,8 +1193,8 @@
 					border-right: 1px dotted $background;
 					vertical-align: top;
 					.football-match {
-						font-size: $meta-size-4;
-						line-height: $meta-lead-4;
+						font-size: $meta-size-2;
+						line-height: $meta-lead-2;
 						padding: 3px $base-4 * 12;
 						margin-bottom: 4px;
 						position: relative;
@@ -1219,8 +1219,8 @@
 					width: 50%;
 					vertical-align: top;
 					.football-table-entry {
-						font-size: $meta-size-4;
-						line-height: $meta-lead-4;
+						font-size: $meta-size-2;
+						line-height: $meta-lead-2;
 						padding: 3px 0 3px $base-4 * 12;
 						margin-bottom: 4px;
 						position: relative;
